# Medical-RAG

./: .gitignore  Dockerfile  README.md  evaluation_test_questions.json  pyproject.toml  rag_responses.json
api/: main.py
evaluations/: evaluate_pipeline.py  evaluate_responses.py  generate_synthetic_testset.py  generate_testset.py
src/config/: aws.py
src/etl_pipeline/: chunker.py  embedder.py  extractor.py  pipeline.py  reranker.py
src/generation/: llm.py  prompts.py
src/rag/: pipeline.py
ui/: gradio_app.py
